--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 bin/
 build/
-src/*/TODO.txt
+src/containers/TODO.txt
+src/graph/TODO.txt
+src/io/TODO.txt
+src/math/TODO.txt
+src/similarity_distance/TODO.txt
